# KeyPoint

./: LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  windows-release.yml
docs/: macos-install.md  macos-signing.md  windows-build.md
scripts/: build-windows.ps1  prepare-macos-signing-secrets.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  input.rs  lib.rs  main.rs
