[package]
name = "keypoint"
version = "0.1.4"
description = "Keyboard-first mouse control utility"
authors = ["KeyPoint"]
edition = "2021"
homepage = "https://github.com/Kook-s/KeyPoint"
repository = "https://github.com/Kook-s/KeyPoint"
license = "MIT"

[lib]
name = "keypoint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "keypoint"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
anyhow = "1.0"
dirs = "6.0"
enigo = "0.2"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2.3"
tauri-plugin-opener = "2.2"
thiserror = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
